2A/05_Projet_GL/src/test/deca/context/valid/complet/60_new_class_init.deca
// Description :
// Test valide contextulle
// Resultats :
//    Arbre avec décoration 
// Historique : 
//  cree le 18/01/2024

class A {

}

{
    A a = new A();
}