2A/05_Projet_GL/src/test/deca/context/invalid/complet/85_duplication_declVar_body.deca
// Description :
//    duplication du decl var dans methodBody 
// Resultats :
//    ligne 12 : a est déjà déclarée
// Historique :
//  cree le 18/01/2024


class A {
    void display() {
        int a ; 
        int a ; 
    }
}